<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="mobile_number">mobile number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="logout">Logout</string>
</resources>