<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary"
                android:textSize="20sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/first_name" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/last_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile_number_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile_number_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="1234567890"
                    android:maxLength="10"
                    android:inputType="number"
                    android:hint="@string/mobile_number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"

                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:enabled="true"
                android:text="@string/register" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/account_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:textColor="@color/black"
                    android:text="Do you Have Account?" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/login_txt"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="16sp"
                    android:textColor="@color/design_default_color_primary"
                    android:layout_toEndOf="@+id/account_txt"
                    android:text="@string/login" />
            </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>