<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/design_default_color_primary">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="User Details"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.appbar.MaterialToolbar>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/tool_bar"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="20dp"
    android:orientation="horizontal">
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/username"
        android:layout_weight="1.2"
        android:textSize="16sp"
        android:textColor="@color/gray"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/username_txt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textColor="@color/black"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/first_name"
            android:layout_weight="1.2"
            android:textSize="16sp"
            android:textColor="@color/gray"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fullname_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/last_name"
            android:layout_weight="1.2"
            android:textSize="16sp"
            android:textColor="@color/gray"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/last_name_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mobile_number"
            android:layout_weight="1.2"
            android:textSize="16sp"
            android:textColor="@color/gray"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mobile_number_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/logout" />
</RelativeLayout>